--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ atom_feed:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Sonder Zhang"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "China"
+  bio              : " Currently studying medical artificial intelligence."
+  location         : "UESTC"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   # googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "2020060906023@std.uestc.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "https://github.com/sonderzhang"
   # google_plus      :
   # keybase          :
   # instagram        :
