--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ atom_feed:
 author:
   name             : "Sonder Zhang"
   avatar           : "profile.png"
-  bio              : " Currently studying medical artificial intelligence."
+  bio              : " Currently studying in AIM3 at RUC."
   location         : "UESTC"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
